scrollbar fixes

--- a/client/styles/files-drawer.scss
+++ b/client/styles/files-drawer.scss
@@ -90,7 +90,7 @@ main {
             }
             > ul.recordings {
                 margin-top: 1px;
-                overflow: scroll;
+                overflow: auto;
                 max-height: 200px;
                 display: grid;
                 grid-gap: 7px;
